# bridge

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.relay  README.md  docker-compose.yml
clients/apple/: build-rust.sh
clients/apple/Bridge/: Package.swift
clients/apple/Bridge/Sources/Bridge/: AppAttest.swift  BridgeApp.swift  BridgeEngine.swift  ContentView.swift  SecureEnclaveKeyStore.swift  VPNManager.swift
clients/apple/Bridge/Sources/BridgeCore/: bridge_ffi.h  module.modulemap
clients/apple/Bridge/Sources/BridgeNetworkExtension/: BridgeNetworkExtension.entitlements  Info.plist  PacketTunnelProvider.swift
crates/bridge-api/: Cargo.toml
crates/bridge-api/src/: main.rs  state.rs
crates/bridge-api/src/auth/: mod.rs
crates/bridge-api/src/models/: mod.rs
crates/bridge-api/src/routes/: attest.rs  devices.rs  events.rs  mod.rs  policy.rs
crates/bridge-api/tests/: api_integration.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: api_types.rs  lib.rs
crates/bridge-core/src/camouflage/: fronting.rs  mod.rs  transport.rs
crates/bridge-core/src/dns/: mod.rs  parser.rs  resolver.rs  threat.rs
crates/bridge-core/src/identity/: attestation.rs  keystore.rs  mod.rs
crates/bridge-core/src/inspect/: beacon.rs  dlp.rs  exfiltration.rs  flow.rs  mod.rs  pipeline.rs  tls.rs
crates/bridge-core/src/policy/: mod.rs  rules.rs
crates/bridge-core/src/posture/: mod.rs  osquery.rs
crates/bridge-core/src/routing/: mod.rs
crates/bridge-core/src/siem/: event.rs  mod.rs  pipeline.rs
crates/bridge-core/src/tunnel/: mod.rs  peer.rs  transport.rs
crates/bridge-daemon/: Cargo.toml
crates/bridge-daemon/src/: control_plane.rs  ipc.rs  main.rs
crates/bridge-daemon/src/platform/: linux.rs  macos.rs  mod.rs
crates/bridge-ffi/: Cargo.toml
crates/bridge-ffi/src/: lib.rs
crates/bridge-relay/: Cargo.toml
crates/bridge-relay/src/: inspector.rs  main.rs  peer_map.rs  wg_server.rs
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/devices/: page.tsx
dashboard/src/app/events/: page.tsx
dashboard/src/app/policies/: page.tsx
dashboard/src/lib/: api.ts
deploy/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.relay  docker-compose.yml
docs/: ARCHITECTURE.md  BRAND.md  CUTTING_EDGE.md  EPICS.md  INFRASTRUCTURE.md  PRODUCT_VISION.md  PROTOCOL.md
proto/: bridge.proto  control.proto  relay.proto
