[workspace]
resolver = "2"
members = [
    "crates/bridge-core",
    "crates/bridge-daemon",
    "crates/bridge-relay",
    "crates/bridge-api",
    "crates/bridge-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Crypto
ring = "0.17"

# gRPC / protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# WireGuard
boringtun = "0.6"

# HTTP / Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"

# Internal crates
bridge-core = { path = "crates/bridge-core" }
