[package]
name = "bridge-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
bridge-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
base64 = { workspace = true }
