[package]
name = "bridge-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
bridge-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
