[package]
name = "bridge-relay"
version.workspace = true
edition.workspace = true

[dependencies]
bridge-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
boringtun = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
